--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -57,7 +57,7 @@ This is a generic example that will also work for other network-based authentica
 +
 .Changing Passwords
 IMPORTANT: Changing the password on the {productname} {webui} changes only the local password on the {productname} server.
-This password may not be used at all if PAM is enabled for that user.
+If PAM is enabled for that user, the password might not be used at all.
 In the above example, for instance, the Kerberos password will not be changed.
 
 
