--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -56,7 +56,7 @@ For more information about configuring PAM, see the SUSE Linux Enterprise Server
 This is a generic example that will also work for other network-based authentication methods.
 +
 .Changing Passwords
-IMPORTANT: Changing the password on the {productname} {webui} changes only the local password on the {productname} server.
+IMPORTANT: Changing the password on the {productname} {webui} changes only the local password on the {productname} Server.
 If PAM is enabled for that user, the password might not be used at all.
 In the above example, for instance, the Kerberos password will not be changed.
 
