--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -62,7 +62,7 @@ In the above example, for instance, the Kerberos password will not be changed.
 
 
 
-=== Authentication Via eDirectory and PAM
+=== Authentication with eDirectory and PAM
 
 . First check to ensure eDirectory authentication is working with your current OS for example:
 +
