use .Example block (per feedback)

--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -92,11 +92,12 @@ You can now create users with the same ID used by eDirectory, and check the [gui
 
 
 
-=== Example Quest VAS Active Directory Authentication Template
+// === Example Quest VAS Active Directory Authentication Template
 
 
-If you are using Quest VAS for active directory authentication, you can use this [path]``/etc/pam.d/susemanager`` file.
+// If you are using Quest VAS for active directory authentication, you can use this [path]``/etc/pam.d/susemanager`` file.
 
+.Example of Quest VAS Active Directory Authentication Template
 ----
 #%PAM-1.0
 auth       required       pam_env.so
