--- a/modules/client-configuration/pages/autoyast.adoc
+++ b/modules/client-configuration/pages/autoyast.adoc
@@ -2,7 +2,7 @@
 = AutoYaSt
 
 When you install a {sle} client, there are a number of questions you need to answer.
-In order to automate installation, you can create an {ay} file with all the answers to those questions, so that no user intervention is required.
+To automate installation, you can create an {ay} file with all the answers to those questions, so that no user intervention is required.
 
 {ay} files can be kept on a server and read by individual clients during installation.
 The same {ay} file is used to install multiple clients.
