--- a/modules/client-configuration/pages/kickstart.adoc
+++ b/modules/client-configuration/pages/kickstart.adoc
@@ -2,7 +2,7 @@
 = Kickstart
 
 When you install a {rhel} client, there are a number of questions you need to answer.
-In order to automate installation, you can create a {kickstart} file with all the answers to those questions, so that no user intervention is required.
+To automate installation, you can create a {kickstart} file with all the answers to those questions, so that no user intervention is required.
 
 {kickstart} files can be kept on a server and read by individual clients during installation.
 The same {kickstart} file is used to install multiple clients.
