changes per feedback

--- a/modules/client-configuration/pages/salt-client-proxy.adoc
+++ b/modules/client-configuration/pages/salt-client-proxy.adoc
@@ -26,8 +26,8 @@ When the bootstrap process has completed, your client will be listed at menu:Sys
 
 // TODO: Might need an 'unsupported' note? LKB 2019-05-01
 
-Instead of the {webui}, you can use the command line to register a minion through a proxy.
-This procedure requires that you have installed the Salt package on the minion before registration, and have activated the [systemitem]``Advanced`` systems module.
+Instead of the {webui}, you can use the command line to register a Salt client through a proxy.
+This procedure requires that you have installed the Salt package on the Salt client before registration, and have activated the [systemitem]``Advanced`` systems module.
 
 .Procedure: Registering clients to a proxy using the command line
 
