--- a/modules/installation/pages/install-intro.adoc
+++ b/modules/installation/pages/install-intro.adoc
@@ -17,7 +17,7 @@ Because {productname} allows you to manage large numbers of systems and automati
 ifeval::[{productname} == "SUSE Manager"]
 
 From {slsa}{nbsp}15{nbsp}SP1, {susemgr} Server and Proxy are available as base products, and can be installed with the {slsa} Unified Installer.
-This is the default method of installation, and the primary method described in this book.
+This is the default method of installation.
 
 endif::[]
 
