--- a/modules/installation/pages/install-intro.adoc
+++ b/modules/installation/pages/install-intro.adoc
@@ -21,4 +21,4 @@ This is the default method of installation.
 
 endif::[]
 
-This book also guides you through installing the {jeos} operating system in a virtual machine, before performing the {productname} Server installation.
+This section guides you through installing the {jeos} operating system in a virtual machine, before performing the {productname} Server installation.
