--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -61,7 +61,7 @@ These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 | VirtIO Disk 4        | swap      | 4{nbsp}GB
 |===
 
-. Click btn:[Begin Installation] and your new VM will boot from the JeOS image.
+. Click btn:[Begin Installation] to boot the new VM from the JeOS image.
 
 Proceed through the basic JeOS installation prompts until you reach the command line.
 
