per feedback (remove admonition framing here)
Avoid {macros} in titles

--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -65,17 +65,13 @@ These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 
 Proceed through the basic JeOS installation prompts until you reach the command line.
 
-.Root Password
-[TIP]
-====
 During the basic installation prompts you are asked to enter the root password.
-Select a strong password and then in the next message box btn:[Confirm root Password].
-====
+Select a strong password and in the next message box click btn:[Confirm root Password].
 
 
 
 [[jeos.susemgr.prep]]
-== Preparing JeOS for {productname}
+== Preparing JeOS for SUSE Manager
 
 [[proc.jeos.susemgr.prep]]
 .Procedure: Preparing JeOS for {productname} Installation
