we do not use TIP, use NOTE

--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -33,7 +33,7 @@ In the following table replace _version_ with the actual product version string.
 |===
 
 .{sle} Virtualization Guide
-[TIP]
+[NOTE]
 ====
 For more information on virtualization, see https://www.suse.com/documentation/sles-15/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide].
 ====
