--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -105,7 +105,7 @@ SUSEConnect -p sle-module-web-scripting/15.1/x86_64
 SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
 ----
 +
-TIP: JeOS is configured to install only required packages.
+JeOS is configured to install only required packages.
 To get all features working you should allow to install also recommended packages.
 In `/etc/zypp/zypp.conf` change:
 +
