--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -1,5 +1,5 @@
 [[install-vm]]
-= Installing the virtual machine environment
+= Install SUSE Manager in a Virtual Machine Environment with JeOS
 
 
 
