--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -13,7 +13,7 @@ ifeval::[{suma-content} == true]
 *** xref:install-server-unified.adoc[Install Server]
 *** xref:install-proxy-unified.adoc[Install Proxy]
 endif::[]
-*** xref:install-vm.adoc[Install VM]
+*** xref:install-vm.adoc[Install Server in a Virtual Machine with JeOS]
 // better disabling for now; needs a complete overhaul
 // 2019-06-04, ke :
 // *** xref:install-server.adoc[Install Server from Packages]
