--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -131,6 +131,13 @@ zypper in -t package yast2-storage-ng
 . Partition and mount the virtual disks at the following locations using {yast} Partitioner ([command]``yast2 disk``).
 +
 
+[NOTE]
+====
+Storage size values are the absolute minimum—only suitable for a small test or demo installation.
+Especially [path]``/var/spacewalk/`` may quickly need more space.
+Also consider to create a separate partition for [path]``/srv`` where Kiwi images are stored.
+====
+
 [cols="1,1,1,1", options="header"]
 |===
 | VirtIO Storage Disks | Name                     | Storage Size | File System Type
