updated navigation content was state catalog -> Formula catalog

--- a/modules/reference/pages/navigation/categories-and-pages.adoc
+++ b/modules/reference/pages/navigation/categories-and-pages.adoc
@@ -94,8 +94,8 @@ menu:Remote Commands[]::
 Execute remote commands on targeted systems.
 Select the preview button to ensure selected targets are available and click Run to execute.
 
-menu:State Catalog[]::
-Create, store, and manage states for your Salt clients from the State Catalog.
+menu:Formula Catalog[]::
+Create, store, and manage states for your Salt clients from the Formula Catalog.
 
 
 == Images
