--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -53,6 +53,14 @@ Create three additional virtual disks required for the {productname} storage par
 These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 +
 
+[NOTE]
+====
+Storage size values are the absolute minimum—only suitable for a small test or demo installation.
+Especially [path]``/var/spacewalk/`` may quickly need more space.
+Also consider to create a separate partition for [path]``/srv`` where Kiwi images are stored.
+====
++
+
 [cols="1,1,1", options="header"]
 |===
 | VirtIO Storage Disks | Name      | Sizing
