comment between steps cause trouble

--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -84,9 +84,9 @@ Select a strong password and in the next message box click btn:[Confirm root Pas
 [[proc.jeos.susemgr.prep]]
 .Procedure: Preparing JeOS for {productname} Installation
 
+// Most steps are currently needed because of 4.0 workarounds
 . Log in as `root`.
 
-// 4.0 workaround
 . Uninstall the `sles-release` package:
 +
 
