--- a/modules/administration/pages/tuning-apachetomcat.adoc
+++ b/modules/administration/pages/tuning-apachetomcat.adoc
@@ -1,15 +1,12 @@
 [[tuning-apache-tomcat]]
 = Tuning Apache and Tomcat
 
-
-
-
-
 [WARNING]
 .Altering Apache and Tomcat Parameters
 ====
-Apache and Tomcat Parameters should only be modified with support or consulting as these parameters can have severe and catastrophic performance impacts on your server when improperly adjusted.
-SUSE will not be able to provide support for catastrophic failure when these advanced parameters are modified without consultation.
+Apache and Tomcat parameters should only be modified with support or consulting.
+These parameters can have severe and catastrophic performance impacts on your server when improperly adjusted.
+{suse} will not be able to provide support for catastrophic failure when these advanced parameters are modified without consultation.
 Tuning values for Apache httpd and Tomcat requires that you align these parameters with your server hardware.
 Furthermore testing of these altered values should be performed within a test environment.
 ====
@@ -17,27 +14,29 @@ Furthermore testing of these altered values should be performed within a test en
 
 
 [[at.apache.httpd.maxclient.parameter]]
-== Apache's httpd MaxClients Parameter
+== The Apache httpd MaxClients Parameter
 
-The [parameter]``MaxClients`` setting determines the number of Apache httpd processes, and thus limits the number of client connections that can be made at the same time (SUSE Manager uses the pre-fork MultiProcessing Modules).
-The default value for [parameter]``MaxClients`` in SUSE Manager is 150.
+The [parameter]``MaxClients`` setting determines the number of Apache httpd processes.
+Thus it limits the number of client connections that can be made at the same time ({productname} uses the pre-fork MultiProcessing Modules).
+The default value for [parameter]``MaxClients`` in {productname} is 150.
 If you need to set the [parameter]``MaxClients`` value greater than 150, Apache httpd's ServerLimit setting and Tomcat's [parameter]``maxThreads`` must also be increased accordingly (see below).
 
 [WARNING]
 ====
-The Apache httpd [parameter]``MaxClients`` parameter must always be less or equal than Tomcat's [parameter]``maxThreads`` parameter!
+The Apache httpd [parameter]``MaxClients`` parameter must always be less or equal than the Tomcat [parameter]``maxThreads`` parameter!
 ====
 
-If the [parameter]``MaxClients`` value is reached while the software is running, new client connections will be queued and forced to wait, this may result in timeouts.
-You can check the Apache httpd's [path]``error.log`` for details:
+If the [parameter]``MaxClients`` value is reached while the software is running, new client connections will be queued and forced to wait.
+This may result in timeouts.
+You can check the Apache httpd [path]``error.log`` file for details:
 
 ----
 [error] Server reached MaxClients setting, consider increasing the MaxClients setting
 ----
 
-The default [parameter]``MaxClients`` parameter can be overridden on SUSE Manager by editing the [path]``server-tuning.conf`` file located at [systemitem]``/etc/apache2/``.
-For example [path]``server-tuning.conf`` file:
+The default [parameter]``MaxClients`` parameter can be overridden on {productname} by editing the [path]``server-tuning.conf`` file located at [systemitem]``/etc/apache2/``.
 
+.Example of the [path]``server-tuning.conf`` file
 ----
 # prefork MPM
    <IfModule prefork.c>
@@ -62,24 +61,25 @@ For example [path]``server-tuning.conf`` file:
    </IfModule>
 ----
 
-
 [WARNING]
 ====
 Whenever the Apache httpd [parameter]``MaxClients`` parameter is changed, the [parameter]``ServerLimit`` must also be updated to the same value, or the change will have no effect.
 ====
 
+
+
 [[at.tomcat.maxthreads.parameter]]
-== Tomcat's maxThreads Parameter
+== The Tomcat maxThreads Parameter
 
-Tomcat's [parameter]``maxThreads`` represents the maximum number of request processing threads that it will create.
+The Tomcat [parameter]``maxThreads`` parameter represents the maximum number of request processing threads that it will create.
 This value determines the maximum number of simultaneous requests that it is able to handle.
-All HTTP requests to the SUSE Manager server (from clients, browsers, XMLRPC API scripts, etc.) are handled by Apache httpd, and some of them are routed to Tomcat for further processing.
+All HTTP requests to the {productname} server (from clients, browsers, XMLRPC API scripts, etc.) are handled by Apache httpd, and some of them are routed to Tomcat for further processing.
 It is thus important that Tomcat is able to serve the same amount of simultaneous requests that Apache httpd is able to serve in the worst case.
-The default value for SUSE Manager is 200 and should always be equal or greater than Apache httpd's [parameter]``MaxClients``.
-The [parameter]``maxThreads`` value is located within the [path]``server.xml`` file located at [systemitem]``/etc/tomcat/``.
+The default value for {productname} is 200 and should always be equal or greater than the Apache httpd [parameter]``MaxClients`` parameter.
+The [parameter]``maxThreads`` value is set in the [path]``/etc/tomcat/server.xml`` file.
 
-Example relevant lines in [path]``server.xml``:
 
+.Example of the [path]``/etc/tomcat/server.xml`` file
 ----
 <Connector port="8009" protocol="AJP/1.3" redirectPort="8443" URIEncoding="UTF-8" address="127.0.0.1" maxThreads="200" connectionTimeout="20000"/>
 <Connector port="8009" protocol="AJP/1.3" redirectPort="8443" URIEncoding="UTF-8" address="::1" maxThreads="200" connectionTimeout="20000"/>
@@ -88,7 +88,7 @@ Example relevant lines in [path]``server.xml``:
 [NOTE]
 .Tuning Notes
 ====
-When configuring Apache httpd's [parameter]``MaxClients`` and Tomcat's [parameter]``maxThreads`` parameters you should also take into consideration that each HTTP connection will need one or more database connections.
+When configuring the Apache httpd [parameter]``MaxClients`` and the Tomcat [parameter]``maxThreads`` parameters you should also take into consideration that each HTTP connection will need one or more database connections.
 If the RDBMS is not able to serve an adequate amount of connections, issues will arise.
 See the following equation for a rough calculation of the needed amount of database connections:
 
@@ -98,8 +98,8 @@ See the following equation for a rough calculation of the needed amount of datab
 
 Where:
 
-* 3 is the number of Java processes the server runs with pooled connections (Tomcat, Taskomatic and Search)
-* java_max is the maximum number of connections per Java pool (20 by default, changeable in [path]``/etc/rhn/rhn.conf`` via the hibernate.c3p0.max_size parameter)
-* apache_max is Apache httpd's [parameter]``MaxClients``
+* 3 is the number of Java processes the server runs with pooled connections (Tomcat, Taskomatic, and Search)
+* `java_max` is the maximum number of connections per Java pool (20 by default, changeable in [path]``/etc/rhn/rhn.conf`` with the [parameter]``hibernate.c3p0.max_size`` parameter)
+* `apache_max` is the Apache httpd [parameter]``MaxClients`` parameter
 * 60 is the maximum expected number of extra connections for local processes and other uses
 ====
