--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -12,16 +12,17 @@ The parameter defaults to [systemitem]``0``, which means unlimited.
 java.max_changelog_entries = 0
 ----
 
-When you set this parameter, it will come into effect only for new packages as they are synchronized.
+If you set this parameter, it will come into effect only for new packages when they are synchronized.
 You might like to delete the cached data to remove older data.
-You can delete cached data from the command line, using the SQL interface:
 
 [IMPORTANT]
 ====
-This process can take a long time.
+Deleting cached data can take a long time.
 Depending on the number of channels you have and the amount of data to be deleted, it can potentially take several hours.
 The task is run in the background by Taskomatic, so you can continue to use {productname} while the operation completes, however you should expect some performance loss.
 ====
+
+You can delete cached data from the command line, using the SQL interface:
 
 ----
 spacewalk-sql -i
