--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -17,7 +17,7 @@ ifndef::backend-pdf[]
 *** xref:cobbler.adoc[Cobbler]
 *** xref:disconnected-setup.adoc[Disconnected Setup]
 // Non-SUSE Clients
-** xref:non-suse-clients[Other Clients]
+** xref:non-suse-clients.adoc[Other Clients]
 *** xref:clients-rh.adoc[Red Hat Clients]
 *** xref:clients-centos.adoc[CentOS Clients]
 *** xref:clients-ubuntu.adoc[Ubuntu Clients]
