Added note about cascades.

--- a/modules/client-configuration/pages/disconnected-setup.adoc
+++ b/modules/client-configuration/pages/disconnected-setup.adoc
@@ -12,6 +12,12 @@ The storage device can then be used to update the disconnected {productname} ins
 
 This setup allows your {productname} installation to remain in an offline, disconnected environment.
 
+[NOTE]
+====
+Your RMT or SMT instance must be used to managed a {productname} Server directly.
+It cannot be used to manage a second RMT or SMT instance, in a cascade.
+==== 
+
 For more information on RMT, see https://www.suse.com/documentation/sles-15/book_rmt/data/book_rmt.html.
 
 
