--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -74,7 +74,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 Proceed through the basic JeOS installation prompts until you reach the command line.
 
 During the basic installation prompts you are asked to enter the root password.
-Select a strong password and in the next message box click btn:[Confirm root Password].
+In the next message box click btn:[Confirm root Password].
 
 
 
