--- a/modules/administration/pages/tuning-apachetomcat.adoc
+++ b/modules/administration/pages/tuning-apachetomcat.adoc
@@ -23,7 +23,7 @@ If you need to set the [parameter]``MaxClients`` value greater than 150, Apache 
 
 [WARNING]
 ====
-The Apache httpd [parameter]``MaxClients`` parameter must always be less or equal than the Tomcat [parameter]``maxThreads`` parameter!
+The Apache httpd [parameter]``MaxClients`` parameter must always be less or equal than the Tomcat [parameter]``maxThreads`` parameter.
 ====
 
 If the [parameter]``MaxClients`` value is reached while the software is running, new client connections will be queued and forced to wait.
