--- a/modules/administration/pages/tuning-apachetomcat.adoc
+++ b/modules/administration/pages/tuning-apachetomcat.adoc
@@ -69,7 +69,7 @@ Whenever the Apache httpd [parameter]``MaxClients`` parameter is changed, the [p
 
 
 [[at.tomcat.maxthreads.parameter]]
-== The Tomcat maxThreads Parameter
+== Tomcat maxThreads Parameter
 
 The Tomcat [parameter]``maxThreads`` parameter represents the maximum number of request processing threads that it will create.
 This value determines the maximum number of simultaneous requests that it is able to handle.
