--- a/modules/administration/pages/tuning-apachetomcat.adoc
+++ b/modules/administration/pages/tuning-apachetomcat.adoc
@@ -27,7 +27,7 @@ The Apache httpd [parameter]``MaxClients`` parameter must always be less or equa
 ====
 
 If the [parameter]``MaxClients`` value is reached while the software is running, new client connections will be queued and forced to wait.
-This may result in timeouts.
+This can result in timeouts.
 You can check the Apache httpd [path]``error.log`` file for details:
 
 ----
