--- a/modules/administration/pages/tuning-apachetomcat.adoc
+++ b/modules/administration/pages/tuning-apachetomcat.adoc
@@ -79,7 +79,7 @@ The default value for {productname} is 200 and should always be equal or greater
 The [parameter]``maxThreads`` value is set in the [path]``/etc/tomcat/server.xml`` file.
 
 
-.Example of the [path]``/etc/tomcat/server.xml`` file
+.Example Tomcat Configuration File
 ----
 <Connector port="8009" protocol="AJP/1.3" redirectPort="8443" URIEncoding="UTF-8" address="127.0.0.1" maxThreads="200" connectionTimeout="20000"/>
 <Connector port="8009" protocol="AJP/1.3" redirectPort="8443" URIEncoding="UTF-8" address="::1" maxThreads="200" connectionTimeout="20000"/>
