--- a/modules/administration/pages/tuning-apachetomcat.adoc
+++ b/modules/administration/pages/tuning-apachetomcat.adoc
@@ -98,7 +98,7 @@ See the following equation for a rough calculation of the needed amount of datab
 
 Where:
 
-* 3 is the number of Java processes the server runs with pooled connections (Tomcat, Taskomatic, and Search)
+* `3` is the number of Java processes the server runs with pooled connections (Tomcat, Taskomatic, and Search)
 * `java_max` is the maximum number of connections per Java pool (20 by default, changeable in [path]``/etc/rhn/rhn.conf`` with the [parameter]``hibernate.c3p0.max_size`` parameter)
 * `apache_max` is the Apache httpd [parameter]``MaxClients`` parameter
 * 60 is the maximum expected number of extra connections for local processes and other uses
