--- a/modules/administration/pages/tuning-largedeploys.adoc
+++ b/modules/administration/pages/tuning-largedeploys.adoc
@@ -100,5 +100,5 @@ Increasing the number of PostgreSQL connections will require more RAM.
 Make sure the {productname} server is monitored and swap is never used.
 ====
 
-The above settings should be regarded as guidelines.
+These settings should be regarded as guidelines.
 The setting have been tested to be safe but care should be exercised when changing them, and consulting support is highly recommended.
