--- a/modules/administration/pages/tuning-largedeploys.adoc
+++ b/modules/administration/pages/tuning-largedeploys.adoc
@@ -101,4 +101,4 @@ Make sure the {productname} server is monitored and swap is never used.
 ====
 
 These settings should be regarded as guidelines.
-The setting have been tested to be safe but care should be exercised when changing them, and consulting support is highly recommended.
+The settings have been tested, but care should be exercised when changing them, and consulting support is highly recommended.
